--- a/README
+++ b/README
@@ -27,9 +27,8 @@ You can compile the program with the following code :
 
 h2. Usage
 
-@~# ./bin/breaker_0.2 [ip-address]@
-eg:
-@~# ./bin/breaker_0.2 65.82.122.30@
+<code>~# ./bin/breaker_0.2 [ip-address]</code>
+eg: <code>~# ./bin/breaker_0.2 65.82.122.30</code>
 
 h2. Licence
 
