--- a/README.textile
+++ b/README.textile
@@ -28,8 +28,7 @@ You can compile the program with the following code:
 h2. Usage
 
 @~# ./bin/breaker_0.2 <ip-address>@
-eg:
-@~# ./bin/breaker_0.2 65.82.122.30@
+eg: @~# ./bin/breaker_0.2 65.82.122.30@
 
 h2. Licence
 
