--- a/README.textile
+++ b/README.textile
@@ -2,10 +2,8 @@ h1. Computer Breaker project - version 0.2b
 
 h2. Description
 
-Computer Breaker is a network testing tool that allows networking administrators
-to test if a computer is vulnerable to malicious attacks.
-Using the Nessus scanner, computer-breaker scans the remote host and automaticaly
-exploits its vulnerabilities.
+Computer Breaker is a network testing tool that allows networking administrators to test if a computer is vulnerable to malicious attacks.
+Using the Nessus scanner, computer-breaker scans the remote host and automaticaly exploits its vulnerabilities.
 
 h2. Installation
 
